fixed alignment issue for transformed letter a

--- a/assets/css/logo.css
+++ b/assets/css/logo.css
@@ -15,7 +15,7 @@ span.vflip {
   position: relative;
   display: inline-block;
   right: -0.5px;
-  top: 8px;
+  top: 5px;
   -moz-transform: scaleY(-1);
   -o-transform: scaleY(-1);
   -webkit-transform: scaleY(-1);
